# rab.peti

./: README.md
HackerRank/C/: For_loop_in_c.c  Functions_in_c.c  Hello_world.c  Playing_with_characters.c
HackerRank/C++/: 01_Input_and_output.cpp
HackerRank/Language proficiency/C/: Pointers_in_c.c
HackerRank/Language proficiency/C++/Easy/: 02_Basic_data_types.cpp  03_Conditional_statements.cpp  04_For_loop.cpp  05_Functions.cpp  06_Pointer.cpp  07_Arrays_introduction.cpp
HackerRank/Problem solving/Algorithms/: 01_Solve_me_first.cpp
HomeProjects/Horgaszhely_sorsolo/: settings.gradle
HomeProjects/Horgaszhely_sorsolo/app/: build.gradle
HomeProjects/Horgaszhely_sorsolo/gradle/wrapper/: gradle-wrapper.properties
greenfox/HackerRank/: Bitwise_operators.c  Bitwise_operators.md  Calculate_Nth_term.c  Calculate_Nth_term.md  Conditional_statements_in_c.c  Conditional_statements_in_c.md  For_loop_in_c.md  Functions_in_c.md  HelloWorld.txt  Hello_world.md  Pointers_in_c.md  README.md  Sum_and_difference_of_two_numbers.c  Sum_and_difference_of_two_numbers.md  Sum_of_digits_of_a_five_digit_number.c  Sum_of_digits_of_a_five_digit_number.md  test.c
greenfox/first-task/week-01/day-01/: sendhelp.txt
greenfox/week-01/day-02/AnimalsAndLegs/: main.cpp
greenfox/week-01/day-02/AverageOfInput/: CMakeLists.txt  main.cpp
greenfox/week-01/day-02/BMI/: CMakeLists.txt  main.cpp
greenfox/week-01/day-02/CodingHours/: main.cpp
greenfox/week-05/day-04/Apples/apple_test/: CMakeLists.txt  appletest.cpp
greenfox/week-10/0th_week_project/: main.c
week-01/day-01/: sendhelp.txt
(+432 files in other folders)
